# espeakup

./: .clang-format  .gitignore  .indent.pro  ChangeLog  Makefile  Makefile.am  README  README.md  ToDo  alsa.c  cli.c  configure.ac  espeak.c  espeak_sound.c  espeakup.8  espeakup.c  espeakup.h  makedist  meson.build  meson_options.txt  portaudio.c  queue.c  queue.h  signal.c  softsynth.c  stringhandling.c  stringhandling.h  synth.c  tarball  version
autostart/systemd/: espeakup.service
doc/: TODO  espeakup.8.md  espeakup.8.ronn  meson.build
initscripts/: README  espeakup.redhat
services/: meson.build
services/systemd/: espeakup.conf  espeakup.service.in  espeakup@.service.in  meson.build
src/: cli.c  espeak.c  espeakup.c  espeakup.h  meson.build  queue.c  queue.h  signal.c  softsynth.c  stringhandling.c  stringhandling.h  version.h.in
src/include/: espeakup.h  meson.build  queue.h
